--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@cycle/dom": "^17.5.0",
+    "@cycle/http": "^13.3.0",
     "@cycle/run": "^3.1.0",
     "xstream": "^10.8.0"
   },
